# mandelbrot-visualizer

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: buffer.h  config.h  event.h  fractal.h  julia.h  main.h  mandelbrot.h  rgb.h  screen.h  transformer.h  zoom.h  zoomlist.h
lib/: CMakeLists.txt  buffer.cpp  event.cpp  fractal.cpp  julia.cpp  mandelbrot.cpp  rgb.cpp  screen.cpp  transformer.cpp  zoomlist.cpp
src/: CMakeLists.txt  fractal.cpp
